err/manhattan-formatters.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Unidecode-0.04.21.dist-info'...
Listing './lib/python3.5/site-packages/awesome_slugify-1.6.5.egg-info'...
Listing './lib/python3.5/site-packages/humanize'...
Listing './lib/python3.5/site-packages/humanize/locale'...
Listing './lib/python3.5/site-packages/humanize/locale/fr_FR'...
Listing './lib/python3.5/site-packages/humanize/locale/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/humanize/locale/ko_KR'...
Listing './lib/python3.5/site-packages/humanize/locale/ko_KR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/humanize/locale/ru_RU'...
Listing './lib/python3.5/site-packages/humanize/locale/ru_RU/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/humanize-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/inflection-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/manhattan'...
Listing './lib/python3.5/site-packages/manhattan/formatters'...
Listing './lib/python3.5/site-packages/manhattan/formatters/tests'...
Listing './lib/python3.5/site-packages/manhattan_formatters-0.0.8.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/regex-2018.1.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/slugify'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './share'...
Listing './share/python-wheels'...
